[package]
name = "expander-sha256-opt"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
expander_compiler = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection.git" }
expander-rs = { git = "https://github.com/PolyhedraZK/Expander" }
arith = { git = "https://github.com/PolyhedraZK/Expander" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
rayon = "1.9"
sha2 = "0.10.8"
jemallocator = "0.5.4"

[profile.release]
rpath = false
debug-assertions = false
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
